--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>ws.ament.microprofile</groupId>
     <artifactId>getting-started-microprofile</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>MicroProfile - Getting started example</name>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -15,7 +16,8 @@
         <dependency>
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
+            <type>pom</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
