--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>microprofile-get-started</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
